# sven-integrations

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-deb.sh  version-bump.sh
skills/integrations/: SKILL.md
skills/integrations/anygen/: SKILL.md
skills/integrations/audacity/: SKILL.md
skills/integrations/blender/: SKILL.md
skills/integrations/comfyui/: SKILL.md
skills/integrations/drawio/: SKILL.md
skills/integrations/gimp/: SKILL.md
skills/integrations/inkscape/: SKILL.md
skills/integrations/kdenlive/: SKILL.md
skills/integrations/libreoffice/: SKILL.md
skills/integrations/mermaid/: SKILL.md
skills/integrations/obs-studio/: SKILL.md
skills/integrations/shotcut/: SKILL.md
skills/integrations/zoom/: SKILL.md
src/sven_integrations/anygen/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/anygen/core/: export.py  task.py  verify.py
src/sven_integrations/anygen/tests/: test_core.py
src/sven_integrations/audacity/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/audacity/core/: clips.py  effects.py  export.py  labels.py  media.py  selection.py  tracks.py
src/sven_integrations/audacity/tests/: test_core.py
src/sven_integrations/blender/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/blender/core/: animation.py  lighting.py  materials.py  modifiers.py  objects.py  render.py  scene.py
src/sven_integrations/blender/tests/: test_core.py
src/sven_integrations/comfyui/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/comfyui/core/: images.py  models.py  queue.py  workflow.py
src/sven_integrations/drawio/: backend.py  cli.py  console.py  drawio_xml.py  project.py  session.py
src/sven_integrations/gimp/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/inkscape/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/kdenlive/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/libreoffice/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/mermaid/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/obs_studio/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/shared/: __init__.py  console.py  output.py  session.py
src/sven_integrations/shotcut/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/zoom/: backend.py  cli.py  console.py  project.py  session.py
src/sven_integrations/zoom/core/: auth.py  (+4 more)
tests/: test_integration.bats  test_skills.py
(+54 files in other folders)
